Update `getLastRecord()`, `getFirstRecordContaining()` and `getLastRecordContaining()` to return `Optional<LogRecord>``